Prevent text selection on drag

--- a/src/css/grid.scss
+++ b/src/css/grid.scss
@@ -44,6 +44,7 @@ table.table tr td, table.table tr th{
   vertical-align: middle;
   z-index: 10;
   white-space: nowrap;
+  user-select: none;
 }
 table.table tr th{
   background-color: #eee;
